Cambio de Idioma de Laravel a ES vite v9

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/attributes": "^2.3",
+        "laravel-lang/lang": "^12.19",
+        "laravel-lang/publisher": "^14.6",
         "laravel/breeze": "^1.19",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
